# plaud-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml
node_helper/: package-lock.json  package.json  read-token.mjs
src/plaud_mcp/: __init__.py  config.py  plaud_client.py  server.py
test_fixtures/: smoke_transcribe.py
transcripts/: _build.py
